@startuml
'https://plantuml.com/class-diagram

'formatting
skinparam linetype ortho

title "COVID-19 Vaccine Booking System"

class Account {
id
username
password
}
class Administrator {
username
password
}
class TimeSlot {
id
date
time
duration
location
vaccineRecipient
}
class HealthCareProvider {
name
postcode
organisationID
}
class "<<enum>> \n HealthCareProviderType" as HealthCareProviderType{
CLINIC
HOSPITAL
GP
POPUP
}
class Questionnaire {
eligibilityQuestions
result
dateTaken
}
class VaccineCertificate {
vaccineRecipient
vaccineType
dateIssued
}
class VaccineRecipient {
firstName
lastName
address
DOB
gender
governmentID
medicalHistory
phoneNumber
emailAddress
vaccinationStatus
vaccineTypeReceived
}
class VaccineShot {
dosagesRequired
price
company
}
class "<<enum>> \n  VaccineType" as VaccineType{
ASTRAZENECA
PFIZER
}

Account "*" <- "1" Administrator : creates/views
Account "*" <-- "1" HealthCareProvider : uses
Account "1" <---- "1" VaccineRecipient : creates/uses

TimeSlot "*" <-- "1" Administrator : views
TimeSlot "*" <--- "1" HealthCareProvider : provides
TimeSlot "*" <--- "1" VaccineRecipient : books/searches

HealthCareProviderType "1" <--- "1" HealthCareProvider : is of

Questionnaire "1" <-- "1" VaccineRecipient : answers

VaccineCertificate "*" <- "1" HealthCareProvider : creates
VaccineCertificate "1" <-- "1" VaccineRecipient : accesses

VaccineShot "*" <--- "1" HealthCareProvider : administers
VaccineShot "*" <-- "1" VaccineRecipient : receives

VaccineType "*" <--- "1" Administrator : adds
VaccineType "1" <- "1" VaccineShot : is of
@enduml